--- a/client/src/.env
+++ b/client/src/.env
@@ -1,2 +1,5 @@
-VITE_API_URL=http://localhost:5000
-VITE_SOCKET_URL=http://localhost:5000
+# VITE_API_URL=http://localhost:5000
+# VITE_SOCKET_URL=http://localhost:5000
+
+VITE_API_URL=https://event-booking-application-81f2.onrender.com
+VITE_SOCKET_URL=https://event-booking-application-81f2.onrender.com
