--- a/api/.env
+++ b/api/.env
@@ -1,5 +1,5 @@
 PORT=5000
-CLIENT_URL=http://localhost:5173
+CLIENT_URL=https://event-booking-application-client.vercel.app/
 NODE_ENV=development
-EMAIL_USER=
-pass=
+EMAIL_USER=''
+pass=''
