--- a/api/.env
+++ b/api/.env
@@ -1,5 +1,5 @@
 PORT=5000
-CLIENT_URL=https://event-booking-application-client.vercel.app/
+CLIENT_URL=https://event-booking-application-client.vercel.app
 NODE_ENV=development
 EMAIL_USER=''
 pass=''
