--- a/api/.env
+++ b/api/.env
@@ -1,5 +1,6 @@
 PORT=5000
-CLIENT_URL=https://event-booking-application-client.vercel.app
+CLIENT_URL=https://event-booking-application-client.vercel.app #live
+# CLIENT_URL=http://localhost:5000
 NODE_ENV=development
-EMAIL_USER=''
-pass=''
+EMAIL_USER=venu191202@gmail.com
+EMAIL_PASS=xfyu uwzj fqks bawe
